<resources>
    <string name="app_name">School Journal</string>
    <string name="add_subject">Введите название предмета …</string>
    <string name="top_text">
        Выберите день\nи введите учебные предметы
    </string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="sun">Вс</string>
    <string name="ready">Готово</string>
    <string name="intro_text">Приветствуем Вас в приложении Дневник. Чтобы начать пользоваться Дневником составьте расписание учебных предметов.</string>
    <string name="schedule">РАСПИСАНИЕ</string>
    <string name="rightnow">Прямо сейчас</string>
    <string name="create">Составьте</string>
    <string name="my_note">Моя заметка</string>
    <string name="add">Добавить</string>
    <string name="connect_to_dev">Связаться с разработчиком</string>
    <string name="edit_schedule">Изменить расписание</string>
    <string name="about">О приложении</string>
    <string name="header_about">О приложении «Дневник»</string>
    <string name="info">
        Приложение «Дневник» создано для упрощения жизни учащихся в среднеобразовательных учебных заведениях.
        Здесь Вы можете создавать расписание занятий, записывать либо фотографировать домашние задания,
        а также проводить свободное от занятий время за просмотром увлекательного контента
        (для этого необходимо наличие интернета на вашем устройстве).\nПожалуйтста, если вам понравилось это приложение, поделитесь им с друзьями!
    </string>
    <string name="rights">© 2021 Journal All Rights Reserved</string>
    <string name="desc">123</string>
    <string name="linkedin_com_in_v_kolesnikov">linkedin.com/in/v-kolesnikov/</string>
    <string name="t_me_ghost_iks">t.me/ghost_iks</string>
    <string name="ghost20095_gmail_com">ghost20095@gmail.com</string>
    <string name="desc_2">desc</string>
    <string name="edit_schedule_tv">Измените расписание</string>
    <string name="_16">Сегодня 16 апреля</string>

    <string-array name="daysFull">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="months">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
</resources>