<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".presentation.settingsView.scheduleEditView.EditScheduleFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/toolbar_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/text_top"
                android:text="@string/edit_schedule_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                style="@style/next_iv"
                android:src="@drawable/logo_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mo_btn"
            style="@style/wee_day_button"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/mon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tu_btn"
            style="@style/wee_day_button"
            android:layout_marginTop="24dp"
            android:text="@string/tue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/we_btn"
            style="@style/wee_day_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/wed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/th_btn"
            style="@style/wee_day_button"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/thu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mo_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fr_btn"
            style="@style/wee_day_button"
            android:layout_marginTop="24dp"
            android:text="@string/fri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tu_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sa_btn"
            style="@style/wee_day_button"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/we_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/su_btn"
            style="@style/sunday_button"
            android:text="@string/sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/th_btn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ready_btn"
            style="@style/ready_button"
            android:layout_width="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/ready"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fr_btn"
            app:layout_constraintTop_toBottomOf="@+id/fr_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="-102dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
